# Learning-Code

./: README.md
CVcourse2024/: import torch.py
catkin_ws/: Dockerfile
ceresCurveFitting/: CMakeLists.txt  ceresCurveFitting.cpp
colcon_test/install/: local_setup.sh  setup.sh
colcon_test/install/examples_rclcpp_async_client/lib/examples_rclcpp_async_client/: client_main
colcon_test/install/examples_rclcpp_async_client/share/examples_rclcpp_async_client/: local_setup.sh  package.dsv  package.sh
colcon_test/install/examples_rclcpp_cbg_executor/lib/examples_rclcpp_cbg_executor/: ping  ping_pong  pong
colcon_test/log/: latest_build  latest_test
control_ws/src/install/: local_setup.sh  setup.sh
control_ws/src/log/: latest_build
dev_ws/: wget-log
dev_ws/install/: local_setup.sh  setup.sh
dev_ws/log/: latest_build
g2oCurveFitting/: CMakeLists.txt  g2oCurveFitting.cpp  pointer.cpp
gaussianNewton/: CMakeLists.txt  gaussianNewton.cpp
install/: local_setup.sh  setup.sh
install/base_interfaces_demo/share/base_interfaces_demo/: package.sh
log/: latest_build
orb_cv_ch7/: CMakeLists copy.txt  CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  triangulation.cpp
ros2-mecanum-bot/install/: local_setup.sh  setup.sh
ros2-mecanum-bot/log/: latest_build  latest_list
sdk_mark2_mcnm_ws/install/: local_setup.sh  setup.sh
sdk_mark2_mcnm_ws/log/: latest_build  latest_list
sdk_mark2_mcnm_ws/src/base/xpkg_comm/: CMakeLists.txt
sdk_mark2_mcnm_ws/src/drivers/xpkg_vehicle/: README.md
sdk_mark2_mcnm_ws/src/urdf/xpkg_urdf_mark2_mcnm/: CMakeLists.txt
town_ws/install/: local_setup.sh  setup.sh
town_ws/log/: latest_build
town_ws/src/village_li/: package.xml  setup.py
town_ws/src/village_li/village_li/: li4.py
town_ws/src/village_wang/: CMakeLists.txt
town_ws/src/village_wang/src/: wang2.cpp  wang2_pop.cpp
ws01_plumbing/articubot_one/config/: joystick.yaml
ws01_plumbing/articubot_one/launch/: joystick.launch.py
ws01_plumbing/install/: local_setup.sh  setup.sh
ws01_plumbing/log/: latest_build
ws01_plumbing/src/base_interfaces_demo/: CMakeLists.txt
ws01_plumbing/src/cpp01_topic/: CMakeLists.txt
ws01_plumbing/src/cpp01_topic/src/: demo01_talker_str.cpp  demo02_listener_str.cpp  demo03_talker_stu.cpp  demo04_listener_stu.cpp
ws01_plumbing/src/cpp02_service/: CMakeLists.txt
ws01_plumbing/src/cpp02_service/src/: demo01_server_cpp.cpp  demo02_client_cpp.cpp
ws01_plumbing/src/cpp03_action/src/: demo01_action_server.cpp  demo02_action_client.cpp
ws01_plumbing/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws01_plumbing/src/log/: latest_build
ws01_plumbing/src/py01_topic/: package.xml  setup.py
ws01_plumbing/src/py01_topic/py01_topic/: demo01_talker_str_py.py  demo02_listener_str_py.py
ws01_plumbing/src/py02_service/: setup.py
ws01_plumbing/src/py02_service/py02_service/: demo02_client_py.py
ws01_plumbing/src/py03_action/: package.xml  setup.py
ws01_plumbing/src/py03_action/py03_action/: demo01_action_server_py.py
(+391 files in other folders)
